--- a/_config.yml
+++ b/_config.yml
@@ -88,8 +88,8 @@ bing_site_verification: # out your bing-site-verification ID (Bing Webmaster)
 # Blog
 # -----------------------------------------------------------------------------
 
-blog_name: Blog # blog_name will be displayed in your blog page
-blog_description: A space for my ideas
+blog_name:  # blog_name will be displayed in your blog page
+blog_description: A space for ideas
 permalink: /blog/:year/:title/
 lsi: false # produce an index for related posts
 
